--- a/backend/ReactCrud/.editorconfig
+++ b/backend/ReactCrud/.editorconfig
@@ -2,3 +2,6 @@
 
 # CS8618: O campo não anulável precisa conter um valor não nulo ao sair do construtor. Considere declará-lo como anulável.
 dotnet_diagnostic.CS8618.severity = none
+
+# CS8603: Possível retorno de referência nula.
+dotnet_diagnostic.CS8603.severity = none
